--- a/pack.yaml
+++ b/pack.yaml
@@ -1,11 +1,19 @@
 packs:
   test:
-    filename: test.zip
+    # Specifies the output path for the generated ZIP file.
+    filename: /path/to/output/test.zip
+
+    # Lists the entries that will be included in the ZIP archive.
     entries:
-      - src: ./src/main.rs
-        dest: /src/main.rs
-      - src: ./Cargo.lock
-        dest: /Cargo.lock
-      - src: ./Cargo.toml
-        dest: /Cargo.toml
+
+      # Defines the directory within the archive where files will be stored.
+      - dest_dir: .
+
+        # Specifies the files to include in the specified destination directory.
+        # Files can be specified in two formats: 'source' or dictionary '{src: "", dest: ""}'.
+        files:
+          - ./src/main.rs # Use the original name of the source file if no destination is specified.
+          # Rename the source file for inclusion in the archive.
+          - src: ./src/main.rs
+            dest: renamed_main.rs
 
