--- a/pack.yaml
+++ b/pack.yaml
@@ -1,7 +1,7 @@
 packs:
   test:
     # Specifies the output path for the generated ZIP file.
-    filename: /path/to/output/test.zip
+    filename: path/to/output/test.zip
 
     # Lists the entries that will be included in the ZIP archive.
     entries:
@@ -15,5 +15,20 @@ packs:
           - ./src/main.rs # Use the original name of the source file if no destination is specified.
           # Rename the source file for inclusion in the archive.
           - src: ./src/main.rs
+            dest: renamed_main.rs
+
+  test2:
+    filename: path/to/output/test2.zip
+    entries:
+      - dest_dir: foo
+        files:
+          - src/main.rs
+          - src: src/main.rs
+            dest: renamed_main.rs
+
+      - dest_dir: foo/bar
+        files:
+          - Cargo.toml
+          - src: src/main.rs
             dest: renamed_main.rs
 
