--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
-name = "pack"
+name = "ziply"
 version = "0.1.0"
 edition = "2021"
+description = "A simple tool to easily specify directories inside ZIP files using YAML configuration."
+homepage = "https://github.com/tktk4/ziply"
+repository = "https://github.com/tktk4/ziply"
+license = "MIT"
+readme = "README.md"
+keywords = ["zip", "util"]
 
 [dependencies]
 clap = { version = "4.5.16", features = ["derive"] }
